# mids-w210-capstone

./: .gitignore  README.md
Archive/: pyproject.toml
Archive/api/: run_k6.sh
Archive/api/mlapi/: Dockerfile  docker-build.sh  pyproject.toml  run.sh  run_prod.sh
Archive/api/mlapi/.k8s/bases/: deployment-project.yaml
Archive/api/mlapi/.k8s/overlays/dev/: patch-deployment-project.yaml
Archive/api/mlapi/.k8s/overlays/prod/: virtual-service.yaml
Archive/api/mlapi/mlapi/: main.py
Archive/api/mlapi/tests/: test_mlapi.py
Archive/datasets/: SDGE-ELEC-Q2-2012-2020.xlsx  lawn conversion analysis 070422.csv  microclimate lawn conversion analysis 070422.csv  zipcode_list_formatted_rev.xlsx  zipcodes_with_income.csv
Archive/docker_clusters/: docker-compose.yml
Archive/docker_images/nginx/: docker-build.sh  nginx.conf.w205.orig  w205.key
Archive/gmaps_api/: main.py
Archive/gmaps_api/json_data/: poly4.json  poly5.json
Archive/gmaps_data/: README.md  download_images.ipynb  move_classify.ipynb
Archive/gmaps_data/mod/: load_data.py
Archive/gmaps_data/source_images/: README.md
Archive/gmaps_data/working_dir/: random_forest.ipynb  response_to_images.ipynb
Archive/gmaps_data/working_dir/saved_model/cnn200_model/: saved_model.pb
Archive/google_earth_engine/mod/: eeArea.py  eeImage.py
Archive/scripts/: setup.sh
GEE/: GEE_Modeling.ipynb
PanelDataModels/: .Rhistory  PanelDataDummyNotebookRF.Rmd  PanelDataDummyNotebookTF.Rmd  RFfixedEffectsDay.yml  RFfixedEffectsNight.yml  TFfixedEffectsNight.yml
api/: README.md  load.js  run_dev.sh  run_prod.sh
(+150 files in other folders)
