[tool.poetry]
name = "project"
version = "0.1.0"
description = "W210 Lawn Conversion Project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.21"
pandas = "^1.2"
matplotlib = "^3.5"
googlemaps = "^4.4"
haversine = "^2.5"
requests = "^2.27"
Pillow = "^9"
scikit-image = "^0.18"


[tool.poetry.dev-dependencies]
jupyter = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
